# PalimpsestTxtContrast

./: .gitignore  ENVI_script.py  README.md  main.py  pca.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.bat  setup.py  setup.sh  startup.sh  tile_processor.py  vrt_dataset.vrt
envi/src/: Ideas.txt  OSP.pro  main.py  makeAFile.java
gosp/: README.md  __init__.py  bgp.pyx  file_utils.pyx  gosp_pipeline.py  math_utils.pyx  parallel.pyx  rastio.pyx  runtimes.txt  tcp.pyx  tgp.pyx
gosp/src/: bgp.pyx  gosp_pipeline.py  math_utils.pyx  parallel.pyx  rastio.pyx  skip_bgp.pyx  tcp.pyx  tgp.pyx
old/: main_old.py  pc.pro
python_scripts/improc/: improc_lib.py
python_scripts/utils/: fileio.py
src/: img_processors.py  main.py  process_by_tile.py
src/ENVI_models/: PCA_bandstack.model  gOSP.model
src/IDL_scripts/: ATDCA.pro  BGP.pro  PCA_bandstack.pro  TCP.pro  TGP.pro  build_band_stack.pro  canny.pro  min_noise_fraction.pro  principle_component_analysis.pro  test.pro
src/python_scripts/: gaussian_blur.py  gui.py  hue_cycle.py  modify_hdr.py  ocr.py  run_idl.py  utils.py
src/python_scripts/atdca/: README.md  __init__.py  atdca.py  atdca_pipeline.py  bgp.py  config.py  rastio.py  tcp.py  test.py  tgp.py
src/python_scripts/backburner/: ocr.py  run_idl.py
src/python_scripts/gosp/: README.md  __init__.py  bgp.py  bgp.pyx  bgp_cython.pyx  file_utils.pyx  gosp_pipeline.py  gosp_pipeline.pyx  math_utils.pyx  parallel.py  parallel.pyx  rastio.py  rastio.pyx  runtimes.txt  setup.py  setup_cython.py  skip_bgp.py  skip_bgp.pyx  tcp.py  tcp.pyx  tgp.py  tgp.pyx
(+10 files in other folders)
