[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel",
    "Cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "gosp"
version = "3.2"
description = "Your project description here"
authors = [
    { name="Gian-Mateo (GM)", email="mtifone2022@disroot.org" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["gosp"]
